Fix dashboard spec

--- a/apps/dashboard/src/app/app.component.html
+++ b/apps/dashboard/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="dashboard-nav">Admin Dashboard</div>
+<h1 class="dashboard-nav">Admin Dashboard</h1>
 <div *ngIf="isLoggedIn$ | async; else signIn">
   You are authenticated so you can see this content.
 </div>
